<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/TextViewSemester"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:background="#2d2d2d"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#ffffff" />

</LinearLayout>