<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".QuickView">

    <ListView
        android:id="@+id/ListViewIdeal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
</androidx.coordinatorlayout.widget.CoordinatorLayout>