...
        app:layout_constraintEnd_toEndOf="@+id/Offering"
        app:layout_constraintStart_toEndOf="@+id/PreReqList"
        app:layout_constraintTop_toBottomOf="@+id/ToListTitle"
        android:onClick = "goToPost1"/>

    <TextView
        android:id="@+id/ToList2"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:background="#4863A0"
        android:text="@string/tolist"
        android:textColor="#ffffff"
        android:textIsSelectable="false"
...
