...
        android:background="@drawable/rounded_button"
        android:text="@string/yearNextBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <RadioGroup
        android:id="@+id/yearInfoRadioGrp"
        android:layout_width="320dp"
        android:layout_height="300dp"
        android:layout_marginTop="32dp"
        android:background="#2d2d2d"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
